fix header and navigation on mobile

--- a/app/Resources/less/components/navigation.less
+++ b/app/Resources/less/components/navigation.less
@@ -25,13 +25,15 @@
 
         &__list {
             position: absolute;
-            top: 0;
+            top: @header-height-phone;
             right: 0;
             bottom: 0;
             left: 0;
-            padding: @header-height-phone 1.2 * @header-height-phone;
-            padding-left: 42px;
-            overflow: auto;
+            padding-left: calc(~"29px + @{container-horizontal-offset}"); // 29px = logo width + right offset
+            padding-right: 1.2 * @header-height-phone;
+            padding-bottom: @header-height-phone;
+            overflow-x: hidden;
+            overflow-y: auto;
             background-color: @brand-blue;
             transform: translate3d(0, -100%, 0);
             transition: transform .4s ease .7s;
@@ -108,6 +110,7 @@
             width: 1.2 * @header-height-phone;
             height: @header-height-phone;
             background-color: @brand-yellow;
+            overflow: hidden;
 
             &__container,
             &__top,
