--- a/app/Resources/less/layout/footer.less
+++ b/app/Resources/less/layout/footer.less
@@ -1,4 +1,5 @@
 .footer {
-  height: 200px;
-  background-color: @brand-gray;
+    flex: 1 0 auto;
+    height: 200px;
+    background-color: @brand-gray;
 }
