--- a/app/Resources/less/layout/header.less
+++ b/app/Resources/less/layout/header.less
@@ -1,5 +1,6 @@
 .header {
     display: flex;
+    flex: 1 0 auto;
     flex-direction: column;
     align-items: center;
     background-color: @brand-blue;
